support jei 30.15, removed filter.async setting / upd version style